--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 pydantic>=1.10.0
 pydantic-settings==2.10.1
+email-validator>=2.0.0
+loguru>=0.7.0
 faker>=18.0.0
 pyyaml>=6.0.0
 python-dotenv>=1.0.0
