--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ temp/
 /ccusage
 /frontend/.jest-cache
 /terraform/staging/.terraform
+terraform/staging/shared-infrastructure/.terraform/providers/registry.terraform.io/hashicorp/google/5.45.2/windows_amd64/terraform-provider-google_v5.45.2_x5.exe
